--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -59,8 +59,11 @@
   align-items: center;
   font-size: 1.3rem;
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
   padding: 50px;
+  padding-left: 400px;
+  padding-right: 400px;
+
 }
 
 .block {
@@ -68,7 +71,7 @@
   flex-direction: column;
 }
 
-.name {
+.loc {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -98,15 +101,16 @@
   font-weight: 600;
 }
 
-.name div {
+.loc div {
   display: flex;
   flex-direction: column;
+  width: 300px;
 }
 
 .block button {
   padding: 10px;
   font-size: 20px;
-  width: 20%;
+  width: 15%;
   border-radius: 5px;
   background-color: #ACC3FF;
   color: #0A0F3A;
