--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -77,23 +77,20 @@
   justify-content: space-between;
 }
 
+.card-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .container input {
   font-size: 1.2rem;
   margin: 10px 0 10px 0px;
   border-color: rgb(31, 28, 28);
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 15px;
   background-color: #e8f0fe;
   font-size: 10px;
-}
-
-.container textarea {
-  margin: 10px 0 10px 0px;
-  padding: 5px;
-  border-color: rgb(31, 28, 28);
-  border-radius: 5px;
-  background-color: #e8f0fe;
-  font-size: 20px;
 }
 
 .container h1 {
@@ -105,13 +102,20 @@
   display: flex;
   flex-direction: column;
   width: 300px;
+  padding-bottom: 50px;
+}
+
+.card-info div {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  padding-bottom: 50px;
 }
 
 .block button {
   padding: 10px;
   font-size: 20px;
-  width: 15%;
-  border-radius: 5px;
+  border-radius: 15px;
   background-color: #ACC3FF;
   color: #0A0F3A;
 }
@@ -119,6 +123,23 @@
 .button {
   display: flex;
   align-items: center;
+}
+
+.back-save {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  padding: 20px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 70px;
+}
+
+.delete {
+  padding-left: 100px;
 }
 
 textarea {
