--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -4,20 +4,58 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Manrope", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+  Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #0A0F3A;
 }
 
+h1 {
+  text-align: center;
+  font-weight: 700;
+}
+
 .movie-label {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: left;
   color: #ACC3FF;
   font-size: 25px;
   padding: 20px;
 }
 
 .navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   color: #5B62FF;
   background-color: #ECF4FF;
   padding: 20px;
+}
+
+.home-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #ECF4FF;
+  
+}
+
+.h-button {
+  background-color: #ECF4FF;
+  padding: 10px
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.search-item {
+  width: 50%;
+  padding: 50px;
 }
 
 .three-col {
@@ -51,8 +89,6 @@
 .container {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   min-height: 100vh;
   color: rgb(243, 241, 239);
   justify-content: center;
@@ -64,23 +100,6 @@
   padding-left: 400px;
   padding-right: 400px;
 
-}
-
-.block {
-  display: flex;
-  flex-direction: column;
-}
-
-.loc {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.card-info {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .container input {
@@ -98,11 +117,32 @@
   font-weight: 600;
 }
 
+.container h2 {
+  padding-top: 30px;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+}
+
+.loc {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .loc div {
   display: flex;
   flex-direction: column;
   width: 300px;
   padding-bottom: 50px;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .card-info div {
@@ -144,4 +184,86 @@
 
 textarea {
   resize: none;
+}
+
+.combobox {
+  position: relative;
+  width: 300px;
+  padding-bottom: 50px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  display: none;
+}
+
+.dropdown li {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.dropdown li:hover {
+  background-color: #f0f0f0;
+}
+
+.combobox:hover .dropdown {
+  display: block;
+}
+
+.add {
+  display: flex;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.order-sum-item {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.promo {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.promo-item {
+  padding-left: 10px;
+}
+
+.cancel-submit {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.select-time {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.movie-item {
+  padding: 30px;
 }
