--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -37,13 +37,21 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #ECF4FF;
-  
+  justify-content: center;
+  background-color: #ECF4FF;  
 }
 
 .h-button {
   background-color: #ECF4FF;
   padding: 10px
+}
+
+.edit-button {
+  padding: 10px;
+  font-size: 20px;
+  border: none;
+  background-color: #ECF4FF;
+  color: #0A0F3A;
 }
 
 .search {
@@ -165,12 +173,27 @@ h1 {
   align-items: center;
 }
 
-.back-save {
+.left-button {
   display: flex;
   align-items: center;
   flex-direction: row;
+  padding: 10px;
+}
+
+.cancel-save {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
   padding: 20px;
 }
+
+.check-boxes {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
 
 .cards {
   display: flex;
