--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -50,8 +50,17 @@ h1 {
   padding: 10px;
   font-size: 20px;
   border: none;
+  border-radius: 25px;
   background-color: #ECF4FF;
   color: #0A0F3A;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+  
+    /* Optional: Add hover effect */
+    &:hover {
+      background-color: #628efd; /* Darker tan on hover */
+    }
+
 }
 
 .search {
@@ -61,7 +70,7 @@ h1 {
   justify-content: center;
 }
 
-.search-item {
+.search-bar {
   width: 75%;
   padding: 50px;
 }
@@ -167,6 +176,15 @@ h1 {
   border-radius: 15px;
   background-color: #ACC3FF;
   color: #0A0F3A;
+
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+  
+    /* Optional: Add hover effect */
+    &:hover {
+      background-color: #628efd; /* Darker tan on hover */
+    }
+
 }
 
 .seats {
@@ -339,3 +357,4 @@ input[type="text"] {
   background-color: #ACC3FF;
   color:#060606;
 }
+
