--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -43,7 +43,8 @@ h1 {
 
 .home-btn {
   background-color: #ECF4FF;
-  padding: 10px
+  padding: 10px;
+  width: 40%;
 }
 
 .edit-button {
@@ -226,7 +227,8 @@ h1 {
 .check-boxes {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 
@@ -401,4 +403,10 @@ input[type="text"] {
   border-radius: 25px;
   background-color: #ECF4FF;
   cursor: pointer;
+}
+
+.register-button {
+  display: flex;
+  justify-content: center;
+  width: 10%;
 }
