--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -409,3 +409,55 @@ input[type="text"] {
   justify-content: center;
   width: 10%;
 }
+
+.log-out-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  color: rgb(243, 241, 239);
+  font-size: 1.3rem;
+  border-radius: 10px;
+  width: 100%;
+  padding: 50px;
+  padding-left: 400px;
+  padding-right: 400px;
+
+}
+
+.admin-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  color: rgb(243, 241, 239);
+  font-size: 1.3rem;
+  border-radius: 10px;
+  width: 100%;
+  padding: 50px;
+  padding-left: 400px;
+  padding-right: 400px;
+
+}
+
+.admin-button {
+  padding: 10px;
+  font-size: 15px;
+  border: none;
+  border-radius: 25px;
+  color: #0A0F3A;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+  
+    /* Optional: Add hover effect */
+    admin-button:hover {
+      background-color: #628efd; /* Darker tan on hover */
+    }
+
+}
