--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -97,6 +97,21 @@ h1 {
 
 }
 
+.seat-grid {
+  display: grid;
+  background: #0A0F3A;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 10px;
+  gap: 30px;
+  text-align: center;
+
+  color: #ECF4FF;
+  justify-content: center;
+  text-align: center;
+
+}
+
 .description {
   display: grid;
   gap: 10px;
@@ -460,4 +475,8 @@ input[type="text"] {
       background-color: #628efd; /* Darker tan on hover */
     }
 
+}
+
+.seats {
+  background-color: #a88bf8;
 }
