--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -12,6 +12,7 @@
 h1 {
   text-align: center;
   font-weight: 700;
+  padding-bottom: 20px;
 }
 
 .movie-label {
@@ -518,4 +519,8 @@ input[type="text"] {
 
 .forgot-password:hover {
   text-decoration: underline;
+}
+
+.inp {
+  background: white;
 }
