--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -72,6 +72,11 @@ h1 {
   justify-content: center;
 }
 
+#search {
+  font-size: 15px;
+
+}
+
 .search-bar {
   width: 75%;
   padding: 50px;
@@ -477,6 +482,18 @@ input[type="text"] {
 
 }
 
+.admin-func {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.admin-icons {
+  background: #ECF4FF;
+  border-radius: 25px;
+  padding:20px;
+}
+
 .seats {
   background-color: #a88bf8;
   cursor: pointer;
@@ -521,6 +538,6 @@ input[type="text"] {
   text-decoration: underline;
 }
 
-.inp {
-  background: white;
+#inp {
+  font-size: 15px;
 }
