--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -582,3 +582,49 @@ input[type="password"] {
   background-color: #848afa;
   border-radius: 15px;
 }
+
+/* ComboBox.css */
+
+.combo-box-container {
+  position: relative;
+  display: flex; /* Use flexbox to center the ComboBox */
+  justify-content: center; /* Center the ComboBox horizontally */
+}
+
+.combo-box-selected {
+  padding: 12px; /* Increase padding to make it bigger */
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #ECF4FF;
+  cursor: pointer;
+  width: 400px; /* Set a width for the select box */
+}
+
+.combo-box-options {
+  position: absolute;
+  top: calc(100% + 4px); /* Move options dropdown below the select box */
+  left: 0;
+  width: 100%;
+  max-height: 240px; /* Increase max-height to make the dropdown bigger */
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  background-color: #ECF4FF;
+}
+
+.combo-box-option {
+  padding: 12px; /* Increase padding to make the options bigger */
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.combo-box-option:hover {
+  background-color: #848afa;
+}
+
+.combo-box-option.active {
+  background-color: #848afa;
+  color: #fff;
+}
