Finished ticket selection page and passed info to url's

--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -655,3 +655,10 @@ input[type="password"] {
       background-color: #628efd; /* Darker tan on hover */
     }
 }
+
+.tickets {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+}
