fix for selected seats color

--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -276,6 +276,18 @@ textarea {
   resize: none;
 }
 
+.seats {
+  padding: 10px;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.seats.selected {
+  background-color: lightgreen;
+}
+
+
 .combobox {
   position: relative;
   width: 300px;
