--- a/cinema-booking-system/src/app/globals.css
+++ b/cinema-booking-system/src/app/globals.css
@@ -15,6 +15,18 @@ h1 {
   padding-bottom: 20px;
 }
 
+.datepicker-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background: #f0f0f0; /* Light grey background */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+}
+
 .movie-label {
   display: flex;
   align-items: center;
@@ -30,6 +42,20 @@ h1 {
   align-items: center;
   flex-direction: row;
   justify-content: left;
+  color: #ACC3FF;
+  font-size: 25px;
+  padding: 20px;
+}
+
+.credit-card-select {
+  justify-content: center;
+}
+
+.card-cat {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
   color: #ACC3FF;
   font-size: 25px;
   padding: 20px;
@@ -112,6 +138,12 @@ h1 {
   justify-content: center;
   text-align: center;
 
+}
+
+.ui-datepicker {
+   background: #333;
+   border: 1px solid #555;
+   color: #EEE;
 }
 
 .seat-grid {
